# lm-azuresentinel-pipeline

./: .gitignore  README.md
bicep/: main.bicep  main.bicepparam
bicep/modules/: dcr.bicep  eventhub.bicep  function.bicep  sentinel-rule.bicep  workspace.bicep
docs/: lessons.md
documentation/: architecture.md  demo.md  runbook.md
function/: .funcignore  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
function/src/: __init__.py  ingest.py  models.py  transform.py
function/tests/: conftest.py  test_ingest.py  test_transform.py
function/tests/fixtures/: lm_datapoint_alert.json  lm_logalert.json  lm_test_alert.json
logicmonitor/: README.md  payload_template.json
scripts/: deploy.sh  e2e_smoke_test.sh  generate_eh_sas.sh  teardown.sh  trigger_demo_alert.sh
